[package]
name = "todo-list-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
borsh = "0.9.3"
solana-program = "=1.11.4"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-client = "=1.11.4"
solana-sdk = "=1.11.4"
solana-validator = "=1.11.4"
solana-logger = "=1.11.4"

[lib]
crate-type = ["cdylib", "lib"]
